--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -39,7 +39,8 @@ spec:
           matchExpressions:
             - key: ingress-class
               operator: In
-              values: ["external"]
+              values:
+                - "external"
       config:
         allow-snippet-annotations: true
         annotations-risk-level: Critical
