--- a/kubernetes/apps/observability/kube-prometheus-stack/app/resources/kube-state-metrics.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/resources/kube-state-metrics.yaml
@@ -1,3 +1,4 @@
+---
 kube-state-metrics:
   # For kube-prometheus-stacks that are already installed and configured with
   # custom collectors, commenting out the collectors and extraArgs below will
@@ -27,7 +28,9 @@ kube-state-metrics:
           - imagerepositories
           - imagepolicies
           - imageupdateautomations
-        verbs: [ "list", "watch" ]
+        verbs:
+          - "list"
+          - "watch"
   customResourceState:
     enabled: true
     config:
@@ -45,13 +48,28 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, lastAppliedRevision ]
-                  source_name: [ spec, sourceRef, name ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - lastAppliedRevision
+                  source_name:
+                    - spec
+                    - sourceRef
+                    - name
           - groupVersionKind:
               group: helm.toolkit.fluxcd.io
               version: v2
@@ -64,16 +82,46 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, history, "0", chartVersion ]
-                  chart_name: [ status, history, "0", chartName ]
-                  chart_app_version: [ status, history, "0", appVersion ]
-                  chart_ref_name: [ spec, chartRef, name ]
-                  chart_source_name: [ spec, chart, spec, sourceRef, name ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - history
+                    - "0"
+                    - chartVersion
+                  chart_name:
+                    - status
+                    - history
+                    - "0"
+                    - chartName
+                  chart_app_version:
+                    - status
+                    - history
+                    - "0"
+                    - appVersion
+                  chart_ref_name:
+                    - spec
+                    - chartRef
+                    - name
+                  chart_source_name:
+                    - spec
+                    - chart
+                    - spec
+                    - sourceRef
+                    - name
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -86,13 +134,28 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - artifact
+                    - revision
+                  url:
+                    - spec
+                    - url
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -105,14 +168,31 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  endpoint: [ spec, endpoint ]
-                  bucket_name: [ spec, bucketName ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - artifact
+                    - revision
+                  endpoint:
+                    - spec
+                    - endpoint
+                  bucket_name:
+                    - spec
+                    - bucketName
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -125,13 +205,28 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - artifact
+                    - revision
+                  url:
+                    - spec
+                    - url
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -144,14 +239,31 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  chart_name: [ spec, chart ]
-                  chart_version: [ spec, version ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - artifact
+                    - revision
+                  chart_name:
+                    - spec
+                    - chart
+                  chart_version:
+                    - spec
+                    - version
           - groupVersionKind:
               group: source.toolkit.fluxcd.io
               version: v1
@@ -164,13 +276,28 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  revision: [ status, artifact, revision ]
-                  url: [ spec, url ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  revision:
+                    - status
+                    - artifact
+                    - revision
+                  url:
+                    - spec
+                    - url
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1beta3
@@ -183,10 +310,16 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  suspended: [ spec, suspend ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  suspended:
+                    - spec
+                    - suspend
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1beta3
@@ -199,10 +332,16 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  suspended: [ spec, suspend ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  suspended:
+                    - spec
+                    - suspend
           - groupVersionKind:
               group: notification.toolkit.fluxcd.io
               version: v1
@@ -215,12 +354,24 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  webhook_path: [ status, webhookPath ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  webhook_path:
+                    - status
+                    - webhookPath
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta2
@@ -233,12 +384,24 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  image: [ spec, image ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  image:
+                    - spec
+                    - image
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta2
@@ -251,12 +414,25 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  source_name: [ spec, imageRepositoryRef, name ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  source_name:
+                    - spec
+                    - imageRepositoryRef
+                    - name
           - groupVersionKind:
               group: image.toolkit.fluxcd.io
               version: v1beta2
@@ -269,9 +445,22 @@ kube-state-metrics:
                   type: Info
                   info:
                     labelsFromPath:
-                      name: [ metadata, name ]
+                      name:
+                        - metadata
+                        - name
                 labelsFromPath:
-                  exported_namespace: [ metadata, namespace ]
-                  ready: [ status, conditions, "[type=Ready]", status ]
-                  suspended: [ spec, suspend ]
-                  source_name: [ spec, sourceRef, name ]
+                  exported_namespace:
+                    - metadata
+                    - namespace
+                  ready:
+                    - status
+                    - conditions
+                    - "[type=Ready]"
+                    - status
+                  suspended:
+                    - spec
+                    - suspend
+                  source_name:
+                    - spec
+                    - sourceRef
+                    - name
