--- a/.github/labels.yaml
+++ b/.github/labels.yaml
@@ -1,23 +1,41 @@
 ---
 # Areas
-- { name: "area/bootstrap",             color: "326be5", description: "Changes made in the bootstrap directory."  }
-- { name: "area/docs",                  color: "0e8a16", description: "Changes made in the docs directory."       }
-- { name: "area/github",                color: "141a22", description: "Changes made in the github directory."     }
-- { name: "area/kubernetes",            color: "326be5", description: "Changes made in the kubernetes directory." }
-- { name: "area/renovate",              color: "027fa0", description: "Changes made in the renovate directory."   }
-- { name: "area/talos",                 color: "382d56", description: "Changes made in the talos directory."      }
-- { name: "area/taskfile",              color: "28bdaf", description: "Changes made in the taskfiles directory."  }
-- { name: "area/truenas",               color: "0094d4", description: "Changes made in the truenas directory."    }
+- name: area/bootstrap
+  color: "326be5"
+- name: area/docs
+  color: "0e8a16"
+- name: area/github
+  color: "141a22"
+- name: area/kubernetes
+  color: "326be5"
+- name: area/renovate
+  color: "027fa0"
+- name: area/talos
+  color: "382d56"
+- name: area/taskfile
+  color: "28bdaf"
+- name: area/truenas
+  color: "0094d4"
 # Renovate Types
-- { name: "renovate/container",         color: "027fa0" }
-- { name: "renovate/github-action",     color: "027fa0" }
-- { name: "renovate/github-release",    color: "027fa0" }
-- { name: "renovate/grafana-dashboard", color: "027fa0" }
-- { name: "renovate/helm",              color: "027fa0" }
+- name: renovate/container
+  color: "027fa0"
+- name: renovate/github-action
+  color: "027fa0"
+- name: renovate/github-release
+  color: "027fa0"
+- name: renovate/grafana-dashboard
+  color: "027fa0"
+- name: renovate/helm
+  color: "027fa0"
 # Semantic Type
-- { name: "type/digest",                color: "ffec19" }
-- { name: "type/patch",                 color: "ffec19" }
-- { name: "type/minor",                 color: "ff9800" }
-- { name: "type/major",                 color: "f6412d" }
+- name: type/digest
+  color: "ffec19"
+- name: type/patch
+  color: "ffec19"
+- name: type/minor
+  color: "ff9800"
+- name: type/major
+  color: "f6412d"
 # Uncategorized
-- { name: "hold",                       color: "ee0701" }
+- name: hold
+  color: "ee0701"
