--- a/kubernetes/apps/database/dragonfly/cluster/podmonitor.yaml
+++ b/kubernetes/apps/database/dragonfly/cluster/podmonitor.yaml
@@ -8,6 +8,7 @@ spec:
   selector:
     matchLabels:
       app: *app
-  podTargetLabels: ["app"]
+  podTargetLabels:
+    - "app"
   podMetricsEndpoints:
     - port: admin
