--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -38,7 +38,8 @@ spec:
           matchExpressions:
             - key: ingress-class
               operator: In
-              values: ["internal"]
+              values:
+                - "internal"
       config:
         allow-snippet-annotations: true
         annotations-risk-level: Critical
