--- a/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
+++ b/kubernetes/apps/storage/democratic-csi/nfs/helmrelease.yaml
@@ -68,7 +68,11 @@ spec:
           detachedVolumesFromSnapshots: false
           detachedVolumesFromVolumes: false
         mountOptions:
-          ["nfsvers=4.2", "nconnect=8", "hard", "noatime", "nodiratime"]
+          - "nfsvers=4.2"
+          - "nconnect=8"
+          - "hard"
+          - "noatime"
+          - "nodiratime"
         secrets:
           provisioner-secret:
           controller-publish-secret:
