--- a/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
+++ b/kubernetes/apps/system-upgrade/system-upgrade-controller/plans/plan.yaml
@@ -44,7 +44,8 @@ spec:
     matchExpressions:
       - key: kubernetes.io/os
         operator: In
-        values: ["linux"]
+        values:
+          - "linux"
   upgrade:
     image: ghcr.io/jfroy/tnu:0.4.4
     args:
