--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -196,6 +196,8 @@ spec:
         env:
           - name: dictionaries
             value: "en_GB en_US sv_SE"
+          - name: server_name
+            value: "nextcloud-collabora.self-hosted.svc.cluster.local"
         existingSecret:
           enabled: true
           secretName: *secret
