--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -192,13 +192,12 @@ spec:
     collabora:
       enabled: true
       collabora:
-        # extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN} --o:num_prespawn_children=4
-        extra_params: --o:ssl.enable=false
+        extra_params: --o:ssl.termination=true --o:ssl.enable=false --o:welcome.enable=false --o:frame-ancestors=nextcloud.${SECRET_DOMAIN} --o:num_prespawn_children=4
         env:
           - name: dictionaries
             value: "en_GB en_US sv_SE"
           - name: server_name
-            value: "nextcloud-collabora.self-hosted.svc.cluster.local"
+            value: "collabora.${SECRET_DOMAIN}"
         existingSecret:
           enabled: true
           secretName: *secret
