--- a/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
@@ -171,3 +171,24 @@ spec:
     body:
       type: Inline
       inline: "Vade Retro, Satanas!"
+---
+# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: collabora
+spec:
+  hostnames:
+    - collabora.${SECRET_DOMAIN}
+  parentRefs:
+    - name: envoy-internal
+      namespace: network
+      sectionName: https
+  rules:
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /
+      backendRefs:
+        - name: nextcloud-collabora
+          port: 9980
