--- a/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
@@ -176,7 +176,7 @@ spec:
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: collabora
+  name: nextcloud-collabora
 spec:
   hostnames:
     - collabora.${SECRET_DOMAIN}
@@ -185,10 +185,31 @@ spec:
       namespace: network
       sectionName: https
   rules:
-    - matches:
+    - backendRefs:
+        - name: nextcloud-collabora
+          port: 9980
+      matches:
         - path:
             type: PathPrefix
             value: /
-      backendRefs:
-        - name: nextcloud-collabora
-          port: 9980
+---
+apiVersion: gateway.envoyproxy.io/v1alpha1
+kind: BackendPolicy
+metadata:
+  name: nextcloud-collabora-policy
+spec:
+  targetRefs:
+    - kind: Service
+      name: nextcloud-collabora
+      group: ""
+  timeout:
+    request: 3600s # proxy-read-timeout
+    idle: 3600s    # proxy-send-timeout
+  buffer:
+    maxRequestBytes: 10737418240  # 10G proxy-body-size
+    maxResponseBytes: 536870912   # 512M client-body-buffer-size
+  loadBalancer:
+    type: ConsistentHash
+    consistentHash:
+      hashKey: HEADER
+      headerName: WOPISrc
