chore(nextcloud): test ingress for collabora

--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -209,6 +209,9 @@ spec:
         enabled: true
         hosts:
           - host: nextcloud-collabora.self-hosted.svc.cluster.local
+            paths:
+              - path: /
+                pathType: ImplementationSpecific
       probes:
         liveness: &probes
           enabled: false
