--- a/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/helmrelease.yaml
@@ -196,22 +196,13 @@ spec:
         env:
           - name: dictionaries
             value: "en_GB en_US sv_SE"
-          - name: server_name
-            value: "collabora.${SECRET_DOMAIN}"
+          - name: aliasgroup1
+            value: "https://.*:443"
         existingSecret:
           enabled: true
           secretName: *secret
           usernameKey: COLLABORA_USERNAME
           passwordKey: COLLABORA_PASSWORD
-      ingress:
-        annotations:
-          nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_WOPISrc"
-        enabled: true
-        hosts:
-          - host: nextcloud-collabora.self-hosted.svc.cluster.local
-            paths:
-              - path: /
-                pathType: ImplementationSpecific
       probes:
         liveness: &probes
           enabled: false
