--- a/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
+++ b/kubernetes/apps/self-hosted/nextcloud/app/httproute.yaml
@@ -105,7 +105,7 @@ spec:
               type: ReplaceFullPath
               replaceFullPath: /public.php?service=host-meta-json
       backendRefs: *backendRef
-    # Block restricted paths
+    # Block restricted paths.
     - matches:
         - path:
             type: PathPrefix
