chore(blackbox-exporter): refactoring & move deployment

--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -8,6 +8,7 @@ components:
 resources:
   # Flux-Kustomizations
   - ./alloy/ks.yaml
+  - ./blackbox-exporter/ks.yaml
   - ./exporters
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
