--- a/kubernetes/apps/cert-manager/cert-manager/tls/certificate.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/tls/certificate.yaml
@@ -1,33 +1,33 @@
----
+# ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cert-manager.io/certificate_v1.json
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: "${SECRET_DOMAIN/./-}"
-spec:
-  secretName: "${SECRET_DOMAIN/./-}-tls"
-  issuerRef:
-    name: letsencrypt-production
-    kind: ClusterIssuer
-  commonName: "${SECRET_DOMAIN}"
-  dnsNames:
-    - "${SECRET_DOMAIN}"
-    - "*.${SECRET_DOMAIN}"
----
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: "${SECRET_DOMAIN/./-}"
+# spec:
+#   secretName: "${SECRET_DOMAIN/./-}-tls"
+#   issuerRef:
+#     name: letsencrypt-production
+#     kind: ClusterIssuer
+#   commonName: "${SECRET_DOMAIN}"
+#   dnsNames:
+#     - "${SECRET_DOMAIN}"
+#     - "*.${SECRET_DOMAIN}"
+# ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cert-manager.io/certificate_v1.json
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: "${SECRET_DOMAIN/./-}-staging"
-spec:
-  secretName: "${SECRET_DOMAIN/./-}-staging-tls"
-  issuerRef:
-    name: letsencrypt-staging
-    kind: ClusterIssuer
-  commonName: "${SECRET_DOMAIN}"
-  dnsNames:
-    - "${SECRET_DOMAIN}"
-    - "*.${SECRET_DOMAIN}"
+# apiVersion: cert-manager.io/v1
+# kind: Certificate
+# metadata:
+#   name: "${SECRET_DOMAIN/./-}-staging"
+# spec:
+#   secretName: "${SECRET_DOMAIN/./-}-staging-tls"
+#   issuerRef:
+#     name: letsencrypt-staging
+#     kind: ClusterIssuer
+#   commonName: "${SECRET_DOMAIN}"
+#   dnsNames:
+#     - "${SECRET_DOMAIN}"
+#     - "*.${SECRET_DOMAIN}"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/cert-manager.io/certificate_v1.json
 apiVersion: cert-manager.io/v1
