--- a/kubernetes/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/ks.yaml
@@ -58,7 +58,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app cert-manager-tls
+  name: &app cert-manager-certificates
   namespace: &namespace cert-manager
 spec:
   commonMetadata:
@@ -68,7 +68,7 @@ spec:
     - name: cert-manager
       namespace: *namespace
   interval: 1h
-  path: ./kubernetes/apps/cert-manager/cert-manager/tls
+  path: ./kubernetes/apps/cert-manager/cert-manager/certificates
   prune: true
   retryInterval: 2m
   sourceRef:
