--- a/kubernetes/apps/network/envoy-gateway/config/config.yaml
+++ b/kubernetes/apps/network/envoy-gateway/config/config.yaml
@@ -72,8 +72,7 @@ spec:
       tls:
         certificateRefs:
           - kind: Secret
-            # name: "${SECRET_DOMAIN/./-}-staging-tls"
-            name: default-certificate
+            name: "${SECRET_DOMAIN/./-}-tls"
 ---
 # yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
 apiVersion: gateway.networking.k8s.io/v1
@@ -104,8 +103,7 @@ spec:
       tls:
         certificateRefs:
           - kind: Secret
-            # name: "${SECRET_DOMAIN/./-}-staging-tls"
-            name: default-certificate
+            name: "${SECRET_DOMAIN/./-}-tls"
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/envoyproxy/gateway/refs/heads/main/charts/gateway-helm/crds/generated/gateway.envoyproxy.io_clienttrafficpolicies.yaml
 apiVersion: gateway.envoyproxy.io/v1alpha1
